CIR-I4177 | department dropdown overflow issue fixed

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -389,6 +389,7 @@ button.add-btn {
 .multiselect-with-border {
   border: 1px solid $borderColor;
   border-radius: 3px;
+  overflow-y: auto;
 }
 
 .fs1 {
